--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>Find your film</title>
   </head>
   <body>
+    <header>
+      <div class="title">
+        <h1>Find your film</h1>
+        <a class="page-link" href="mywatchlist.html">My Watchlist</a>
+      </div>
+      <div id="search-bar">
+        <input id="search-input" type="text" />
+        <button id="search-btn" type="submit">Search</button>
+      </div>
+    </header>
+    <div id="search-results" class="initial-state">
+      <i class="fa-solid fa-film"></i>
+      <p>Start exploring</p>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/8e1bf2d8d4.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js"></script>
   </body>
 </html>
