--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -7,6 +7,23 @@
     <title>My Watchlist</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <header>
+      <div class="title">
+        <h1>My Watchlist</h1>
+        <a class="page-link" href="index.html">Search for movies</a>
+      </div>
+    </header>
+    <div id="my-watchlist" class="initial-state">
+      <p class="empty-list">Your watchlist is looking a little empty...</p>
+      <a class="to-search" href="index.html"
+        ><i class="fa-solid fa-circle-plus" style="color: #ffffff"></i>Let's add
+        some movies!</a
+      >
+    </div>
+    <script
+      src="https://kit.fontawesome.com/8e1bf2d8d4.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="mywatchlist.js"></script>
   </body>
 </html>
