--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -13,13 +13,7 @@
         <a class="page-link" href="index.html">Search for movies</a>
       </div>
     </header>
-    <div id="my-watchlist" class="initial-state">
-      <p class="empty-list">Your watchlist is looking a little empty...</p>
-      <a class="to-search" href="index.html"
-        ><i class="fa-solid fa-circle-plus" style="color: #ffffff"></i>Let's add
-        some movies!</a
-      >
-    </div>
+    <div id="my-watchlist" class="initial-state"></div>
     <script
       src="https://kit.fontawesome.com/8e1bf2d8d4.js"
       crossorigin="anonymous"
